--- a/src/Home/PDFV.css
+++ b/src/Home/PDFV.css
@@ -5,7 +5,7 @@
     cursor: pointer;
     font-size: 1.2rem;
     font-weight: bold;
-    color: #fff;
+    color: #488be3;
     margin-bottom: 20px;
   }
   
@@ -32,6 +32,7 @@
   
   .pdfv-quote-text {
     font-size: 1.2rem;
+    
   }
   
   .pdfv-quote-author {
@@ -70,12 +71,12 @@
     width: 100%;
     padding: 12px;
     border-radius: 30px;
-    border: 1px solid #ccc;
+    border: 1px solid #488be3;
   }
   
   /* PDF Cards */
   .pdfv-card {
-    border: 1px solid #ddd;
+    border: 1px solid #488be3;
     border-radius: 10px;
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -120,7 +121,7 @@
   .pdfv-page-item.active .pdfv-page-link {
     background-color: #007bff;
     
-    color: white;
+    color: #488be3;
   }
   
   .pdfv-page-item.disabled .pdfv-page-link {
@@ -165,4 +166,7 @@
     .pdfv-quote-author {
       font-size: 0.9rem;
     }
+  }
+  .pdfv-card-body p{
+    color: #0056b3 !important;
   }
