--- a/src/Home/Profile.css
+++ b/src/Home/Profile.css
@@ -11,7 +11,7 @@
 
 /* Heading */
 .pro-heading {
-  color: #288598;
+  color: #488be3;
   font-size: 32px;
   font-weight: bold;
   margin-bottom: 20px;
@@ -29,7 +29,7 @@
   font-size: 24px;
   color: #333;
   margin-bottom: 10px;
-  border-bottom: 2px solid #288598;
+  border-bottom: 2px solid #488be3;
   display: inline-block;
   padding-bottom: 5px;
 }
@@ -47,7 +47,8 @@
 
 /* Feedback Button */
 .feedback-button {
-  background: #288598;
+  background: #488be3;
+  margin-bottom: 10px;
   color: #ffffff;
   padding: 12px 20px;
   border: none;
@@ -113,7 +114,7 @@
 }
 
 .modal-actions button {
-  background: #288598;
+  background: #488be3;
   color: #fff;
   padding: 10px 15px;
   border: none;
@@ -134,4 +135,22 @@
 
 .modal-actions button:first-child:hover {
   background: #bbb;
+}
+/* Avatar Container */
+.avatar-container {
+  margin: 20px 0;
+  text-align: center;
+}
+
+.avatar-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 4px solid #488be3;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.avatar-image:hover {
+  transform: scale(1.1);
 }
